--- a/codebase/front-end/weeklylog.html
+++ b/codebase/front-end/weeklylog.html
@@ -17,15 +17,17 @@
 	  
     <div id="wrapper">  
 
-        <div id="month">
+        <div id="weekly">
             
             <h1>
-                <!-- <i class="fa fa-bars" ></i> -->
-                <i class="fa fa-bars" style="font-size: 24px;"></i>
+                <div>
+                    <i id="navBarIcon" class="fa fa-bars" style="font-size: 24px;"></i>
+                </div>
+                
                 <i class="arrow left" ></i>
                 January 2021
                 <i class="arrow right"></i>
-                <i class="fa fa-plus" style="font-size: 20px;"></i>
+                <i id="plusSign" class="fa fa-plus" style="font-size: 20px;"></i>
             </h1>
             <hr>
         </div>
