--- a/desktop_page.html
+++ b/desktop_page.html
@@ -1,149 +1,42 @@
-@media screen and (max-width: 900px) {
-  
-    .search_bar {
-        display: none;
-    }
+<!DOCTYPE html>
+<html>
 
-}
+<head>
+    <meta charset='utf-8'>
+    <title>CSE 110 Test</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='desktop_page.css'>
+</head>
 
-@media screen and (min-width: 600px) {
-    .search_bar {
-        float: right;
-    }
-}
+<body>
+    <div class="sidebar">
+        <button class="imgbutton home_button"><img src="images/home_icon.png"></button>
+        <button class="imgbutton tracker_button"><img src="images/tracker_icon.png"></button>
+        <button class="imgbutton account_button"><img src="images/account_icon.png"></button>
+    </div>
 
-/* Fade-in buttons */
-button {
-    border: none;
-    background-color: rgba(0,0,0,0);
-}
+    <div class="topbar">
+        <span class="future_log">
+            <button class="imgbutton future_log_back"><img src="images/left-chevron.png"></button>
+            <h1>Future Log</h1>
+            <button class="imgbutton future_log_forward"><img src="images/right-chevron.png"></button>
+        </span>
 
-button.imgbutton img {
-    filter: opacity(50%);
-}
+        <span class="search_bar">
+            <img src="images/search_icon.png">
+            <input type="text" placeholder="Search">
+        </span>
+    </div>
 
-button.imgbutton:hover img {
-    filter: opacity(100%);
-    transition: 150ms;
-}
+    <main>
+        <div class="journal_thing">
+            <p>Hello</p>
+        </div>
+    </main>
 
-/* Top navigation */
-.topbar {
-    position: fixed;
-    top: 0;
-    left: 120px;
-    width: calc(100% - 120px - 20px);
-    height: 80px;
+    <!-- <button class="imgbutton dropdown-button">
+        <img src="images/icon.png" width=50px height="50px">
+    </button> -->
+</body>
 
-    border-bottom: solid;
-    border-color: #E5E5E5;
-}
-
-.topbar .future_log {
-    position: relative;
-    top: 1em;
-    margin-top: 100px;
-    margin-left: 10px;
-}
-
-.topbar button {
-    display: inline;
-    margin: 0 10px;
-}
-
-.topbar h1 {
-    display: inline;
-    margin-top: 80px;
-    font-size: 48px;
-}
-
-.search_bar {
-    margin-top: 1em;
-}
-
-.search_bar img {
-    display: inline;
- 
-    opacity: 25%;
-
-    height: 36px;
-    line-height: 36px;
-    vertical-align: text-bottom;
-
-    /* TODO: unjank */
-    position: relative;
-    top: 6px;
-}
-
-.search_bar input{
-    /* TODO: hard coded */
-    font-size: 16pt;
-
-    border: solid;
-    border-radius: 5px;
-    border-color: rgba(0, 0, 0, .25);
-}
-
-/* Fade in for search bar */
-.search_bar:hover img {
-    opacity: 100%;
-    transition: 150ms;
-}
-
-.search_bar:hover input {
-    border-color: rgba(0, 0, 0, .75);
-    transition: 150ms;
-}
-
-.search_bar input:focus {
-    border-color: rgba(0, 0, 0, .75);
-    transition: 150ms;
-}
-
-/* Side navigation */
-.sidebar {
-    height: 100%;
-    width: 100px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    overflow-x: hidden;
-    z-index: 1;
-    padding-top: 20px;
-    background-color: #F7F2EC;
-    text-align: center;
-}
-
-.sidebar button {
-    display: block;
-    color: #818181;
-    padding: 10px 0px;
-    margin: 10px auto;
-}
-
-/* Text editor, to be integrated */
-main {
-    margin-left: 100px;
-    margin-top: 100px;
-}
-
-/* Test code */
-.dropdown-button {
-    display: inline-block;
-    padding: 10px;
-    border-radius: 20px;
-    border: none;
-    background-color: white;
-    transition: 1000ms;
-}
-
-.dropdown-button:hover {
-    background-color: tomato;
-    transition: 250ms;
-}
-
-.dropdown-button:active {
-    border: solid;
-    border-color: gray;
-    transition: 250ms;
-}
+</html>
