--- a/codebase/front-end/index.html
+++ b/codebase/front-end/index.html
@@ -4,8 +4,6 @@
     <meta charset="utf-8">
     <title>testerfile</title>
     <link rel="stylesheet" href="./index.css">
-    <!-- <script src="https://cdn.rawgit.com/showdownjs/showdown/1.0.2/dist/showdown.min.js"></script> -->
-    <!-- uses https://github.com/showdownjs/showdown/wiki (see link for documentation) to convert markdown to html -->
 </head>
 <body>
     <div class="sidebar">
@@ -17,7 +15,11 @@
     <div class="topbar">
         <span class="future_log">
             <button class="imgbutton future_log_back"><img src="images/left-chevron.png"></button>
-            <h1>Future Log</h1>
+
+            <template>
+                <h1 class="title_page">Future Log</h1>
+            </template>
+
             <button class="imgbutton future_log_forward"><img src="images/right-chevron.png"></button>
         </span>
 
@@ -29,7 +31,7 @@
 
     <div class="container-fluid">
         <div id="contentWrapper" contenteditable="true"></div>
-        <script type="module" src="./editor.js"></script>
+        <script type="module" src="./index.js"></script>
     </div>
 </body>
 </html>
