Added WebComponents to dailylog and futurelog under new files named newdailylog and newfuturelog

--- a/codebase/front-end/futurelog.html
+++ b/codebase/front-end/futurelog.html
@@ -34,8 +34,8 @@
 <form action="#" method="post">
     <div class="input-group">
         <input type="text" placeholder="Search"> 
-        <button type ="submit"> <i class="fa fa-search"></i></button><hr>	
-    </div>
+        <button type ="submit"> <i class="fa fa-search"></i></button><hr>
+    </div><br><br>
     <p><a href="#"> January </a> <i class="arrow down"></i></p>
 
 </form>
