--- a/codebase/front-end/index.html
+++ b/codebase/front-end/index.html
@@ -33,7 +33,7 @@
     <div class="input-group">
         <input type="text" placeholder="Search"> 
         <button type ="submit"> <i class="fa fa-search"></i></button><hr>	
-    </div>
+    </div><br><br>
 
     <div>
         <p><h3><a href="#"> Future Log </a> <i class="arrow down"></i></h3></p>
