--- a/codebase/front-end/weeklylog.html
+++ b/codebase/front-end/weeklylog.html
@@ -37,7 +37,7 @@
         <input type="text" placeholder="Search"> 
         <!-- <input type="submit" value="search"> -->
         <button type ="submit"> <i class="fa fa-search"></i></button><hr>	
-    </div>
+    </div><br><br>
     <p><a href="#"> 1 Monday </a> <i class="arrow down"></i></p>
 
 </form>
