committing for later

--- a/codebase/front-end/index.html
+++ b/codebase/front-end/index.html
@@ -17,7 +17,7 @@
             <button class="imgbutton future_log_back"><img src="images/left-chevron.png"></button>
 
             <template>
-                <h1 class="title_page">Future Log</h1>
+                <h1 class="title_page">Template Page Title</h1>
             </template>
 
             <button class="imgbutton future_log_forward"><img src="images/right-chevron.png"></button>
@@ -33,5 +33,9 @@
         <div id="contentWrapper" contenteditable="true"></div>
         <script type="module" src="./index.js"></script>
     </div>
+
+	<script src="//cdn.jsdelivr.net/npm/pouchdb@7.2.1/dist/pouchdb.min.js"></script>
+    <script src="./components/header.js" type="module"></script>
+
 </body>
 </html>
