Integrate (just daily log so far)

--- a/codebase/front-end/index.html
+++ b/codebase/front-end/index.html
@@ -16,7 +16,10 @@
        <script type="module" src="./index.js"></script>
     </div>
 
+    <tracker-menu></tracker-menu>
+
     <script src="./components/header.js" type="module"></script>
+    <script src="./components/tracker-menu.js" type="module"></script>
 
 </body>
 </html>
