Navbar and back funtionality with final tracker design

--- a/codebase/front-end/index.html
+++ b/codebase/front-end/index.html
@@ -10,16 +10,11 @@
     <div id="sidebar"></div>
 
     <div id="topbar"></div>
-
-    <div class="container-fluid">
-        <div id="contentWrapper" contenteditable="true"></div>
-       <script type="module" src="./index.js"></script>
-    </div>
-
-    <tracker-menu></tracker-menu>
-
+	<div id="contentWrapper" contenteditable="true"></div>
+	<div id="trackerWrapper"></div>
+	<script type="module" src="./index.js"></script>
     <script src="./components/header.js" type="module"></script>
-    <script src="./components/tracker-menu.js" type="module"></script>
+    <script src="./components/tracker.js" type="module"></script>
 
 </body>
 </html>
