Dropdown implementation and editor loading
Co-authored-by: Thomas Fischer <tjfischer86@users.noreply.github.com>
Co-authored-by: Carlos Guerrero <cguerrer4612@users.noreply.github.com>

--- a/codebase/front-end/index.html
+++ b/codebase/front-end/index.html
@@ -11,7 +11,7 @@
     <div id="sidebar"></div>
 
     <div id="topbar"></div>
-	<div id="contentWrapper" contenteditable="true"></div>
+	<div id="contentWrapper" contenteditable="false"></div>
 	<div id="trackerWrapper"></div>
 
     <script src="./components/header.js" type="module"></script>
