Added dark and light mode selector.

--- a/codebase/front-end/olddailylog.html
+++ b/codebase/front-end/olddailylog.html
@@ -7,10 +7,12 @@
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./dailylog.css">
+	<link rel="stylesheet" href="./themes/darkmode.css">
 	<script></script>	
     <title>January 1,2021</title>	
 </head>
-<body>
+<body class="darkmode">
+
  <div id="wrapper">  
 
 	<div id="month">
@@ -60,6 +62,12 @@
 		 </ul>
 	  <hr>	
 	</div>	
-			
+
+	<div>
+		<select id="theme">
+			<option value="lightmode">Light Mode</option>
+			<option value="darkmode">Dark Mode</option>
+		</select>
+	</div>	
 </body>
 </html>
