--- a/codebase/front-end/navbar/navbar.html
+++ b/codebase/front-end/navbar/navbar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="navbar.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="navbar.css" rel="stylesheet" type="text/css" /> -->
   </head>
 
   <body>
