--- a/codebase/front-end/index.html
+++ b/codebase/front-end/index.html
@@ -13,9 +13,7 @@
     <div id="topbar"></div>
 	<div id="contentWrapper" contenteditable="false"></div>
 	<div id="trackerWrapper"></div>
-	<button id="targetMenu"></button>
-    <script src="./components/header.js" type="module"></script>
-    <script src="./components/tracker.js" type="module"></script>
+	<button id="targetMenu" style="display: none;"></button>
 
 </body>
 </html>
