--- a/codebase/front-end/index.html
+++ b/codebase/front-end/index.html
@@ -8,9 +8,9 @@
 	<script type="module" src="./index.js"></script>
 </head>
 <body>
-    <div id="sidebar"></div>
+    <nav-bar></nav-bar>
 
-    <div id="topbar"></div>
+    <page-header></page-header>
 	<div id="contentWrapper" contenteditable="false"></div>
 	<div id="trackerWrapper"></div>
 
