--- a/codebase/front-end/index.html
+++ b/codebase/front-end/index.html
@@ -14,6 +14,7 @@
 	<div id="contentWrapper" contenteditable="false"></div>
 	<div id="trackerWrapper"></div>
 	<button id="targetMenu" style="display: none;"></button>
+    <settings-menu></settings-menu>
 
 </body>
 </html>
