--- a/codebase/front-end/index.html
+++ b/codebase/front-end/index.html
@@ -13,7 +13,7 @@
     <div id="topbar"></div>
 	<div id="contentWrapper" contenteditable="false"></div>
 	<div id="trackerWrapper"></div>
-	<button id="targetMenu" style="display: none;"></button>
+	<button id="targetMenu"></button>
 
 </body>
 </html>
