--- a/codebase/front-end/index.html
+++ b/codebase/front-end/index.html
@@ -12,8 +12,8 @@
 
     <page-header></page-header>
 	<div id="contentWrapper" contenteditable="false"></div>
-	<div id="trackerWrapper"></div>
-	<button id="targetMenu" style="display: none;"></button>
+    <tracker-menu></tracker-menu>
+    <button id="targetMenu" style="display: none;"></button>
     <settings-menu></settings-menu>
 
 </body>
