Add theme panel to settings

--- a/codebase/front-end/index.html
+++ b/codebase/front-end/index.html
@@ -14,6 +14,6 @@
 	<div id="contentWrapper" contenteditable="false"></div>
     <tracker-menu></tracker-menu>
     <button id="targetMenu" style="display: none;"></button>
-
+    <settings-menu></settings-menu>
 </body>
 </html>
