--- a/codebase/front-end/entries/entries.html
+++ b/codebase/front-end/entries/entries.html
@@ -4,7 +4,7 @@
   </head>
 
   <body>
-		<entries></entries>
+		<create-entries></create-entries>
     <script src="entries.js" type="module"></script>
   </body>
 <html>
