--- a/src/front-end/testers.html
+++ b/src/front-end/testers.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<div id="template"></div>
+	<script src="./components/datepicker.min.js"></script>
 	<script src="testers.js" type="module"></script>
 </body>
 </html>
