delete futureLog and imageBlock/audioBlock data conversion done

--- a/src/front-end/testers.html
+++ b/src/front-end/testers.html
@@ -8,6 +8,7 @@
 <body>
 	<div id="template"></div>
 	<script src="./components/datepicker.min.js"></script>
+	<script src="./localStorage/pouchdb-7.2.1.min.js"></script>
 	<script src="testers.js" type="module"></script>
 </body>
 </html>
