--- a/src/front-end/index.html
+++ b/src/front-end/index.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>testerfile</title>
-    <link rel="stylesheet" href="./index.css">
-	<script src="./localStorage/pouchdb-7.2.1.min.js"></script>
-	<script type="module" src="./index.js"></script>
+	<script src="./pouchdb-7.2.1.min.js"></script>
 </head>
 <body>
 	<div id="sidebar"></div>
