webpack fixes for servers

--- a/src/front-end/login/login.html
+++ b/src/front-end/login/login.html
@@ -3,11 +3,9 @@
     
 
 <head>
-	<script defer type="module" src="reloader.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="login.css">
 
     <!-- add fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -39,13 +37,12 @@
 
     <!-- logos, names, and contact us-->
     <div class="logo">
-        <img src="bugP3.png" alt="team-logo">
+        <img src="./bugP3.png" alt="team-logo">
     </div>
     <p id=name>My Journal</h2>
 
     <a href="https://github.com/cse110-sp21-group11/cse110-sp21-group11">Contact us</a>
 	<script src="//cdn.jsdelivr.net/npm/pouchdb@7.2.1/dist/pouchdb.min.js"></script>
-    <script src="./login.js" type="module"></script>
 </body>
 
 </html>
