--- a/src/front-end/index.html
+++ b/src/front-end/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
     <title>testerfile</title>
 	<script src="./pouchdb-7.2.1.min.js"></script>
+	<script src="./datepicker.min.js"></script>
 </head>
 <body>
 	<div id="sidebar"></div>
     <div id="topbar"></div>
-
+	<div id="adderDropdown"></div>
+	<div id="creationMenu"></div>
 	<div id="contentWrapper" contenteditable="false"></div>
 	<div id="trackerWrapper"></div>
 	<button id="targetMenu"></button>
