--- a/src/front-end/testers.html
+++ b/src/front-end/testers.html
@@ -4,9 +4,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<style>
+		@font-face {
+			font-family: "SF-Pro";
+			src: url("./public/fonts/SF-Pro.ttf");
+		}
+	</style>
 </head>
 <body>
 	<div id="template"></div>
-	<script src="testers.js" type="module"></script>
 </body>
 </html>
