--- a/src/front-end/testers.html
+++ b/src/front-end/testers.html
@@ -10,6 +10,8 @@
 			src: url("./public/fonts/SF-Pro.ttf");
 		}
 	</style>
+	<script src="./pouchdb-7.2.1.min.js"></script>
+	<script src="./datepicker.min.js"></script>
 </head>
 <body>
 	<div id="template"></div>
