--- a/src/front-end/testers.html
+++ b/src/front-end/testers.html
@@ -9,6 +9,22 @@
 			font-family: "SF-Pro";
 			src: url("./public/fonts/SF-Pro.ttf");
 		}
+		:root{
+			--body-background: #FFFFFFFF;
+			--sidebar-background: #FCFCFCCC;
+			--card-background: #FCFCFCCC;
+			--card-shadow: #00000040;
+			--primary-button-color: #33B5E5FF;
+			--secondary-button-color: #FFBB33FF;
+			--card-background-dim: #ECECECFF;
+			--card-background-dimmer: #DADADAFF;
+			--normal-font-color: #000000FF;
+			--highlighted-font-color: #FFFFFFFF;
+			--dim-title-color: #0000006B;
+			--dimmer-title-color: #A5A5A5FF;
+			--divider-color: #0000001A;
+			--lighter-divider-color: #8C8C8C1A;
+		}
 	</style>
 	<script src="./pouchdb-7.2.1.min.js"></script>
 	<script src="./datepicker.min.js"></script>
