Implemented Help Menu.
Main HelpMenu code is in components/help.jsx

This required a change in navbar.jsx so that the Help button toggles the
menu.

Wrote unit test and had to make another file to segregate puppeteer
tests. Tested using "npm run test -- help.test.js"

--- a/src/front-end/index.html
+++ b/src/front-end/index.html
@@ -14,6 +14,7 @@
 	<div id="contentWrapper" contenteditable="false"></div>
 	<div id="trackerWrapper"></div>
 	<button id="targetMenu"></button>
+	<help-menu></help-menu>
     <settings-menu></settings-menu>
 </body>
 </html>
