src/front-end, front-end/state: adds support for max-width

--- a/src/front-end/index.html
+++ b/src/front-end/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 	<div id="sidebar"></div>
-    <div id="topbar"></div>
-	<div id="adderDropdown"></div>
-	<div id="creationMenu"></div>
-	<div id="contentWrapper" contenteditable="false"></div>
-	<div id="trackerWrapper"></div>
-	<button id="targetMenu"></button>
+    <main>
+		<div id="topbar"></div>
+		<div id="adderDropdown"></div>
+		<div id="creationMenu"></div>
+		<div id="contentWrapper" contenteditable="false"></div>
+	</main>
 	<help-menu></help-menu>
     <settings-menu></settings-menu>
 </body>
